added wakeupheroku functionality
